

<resources>
<!--activity_login.xml-->
<string name="app_name">Chat</string>
<string name="area">国家／地区</string>
<string name="login_1_2">中国</string>
<string name="login_2_1">账号</string>
<string name="login_2_2">QQ号/手机号/邮箱</string>
<string name="password">密码</string>
<string name="login_3_2">填写密码</string>
<string name="login_bn">login</string>
<string name="login_text_5">新用户</string>
<string name="login_leftbottom_text">登录遇到问题?</string>
<string name="login_rightbottom_text">使用其他方式登录</string>

<string name="verification_code">验证码</string>
<string name="add_friend">添加朋友</string>
<string name="search">search</string>
<string name="send">send</string>

<string name="message">聊天</string>
<string name="discovery">朋友圈</string>
<string name="me">个人中心</string>
<string name="contacts">好友</string>

<string name="radiobutton1">Chat</string>
<string name="radiobutton2">Contacts</string>
<string name="radiobutton3">Discover</string>
<string name="radiobutton4">Me</string>

<string name="menu_add_one">Add Contacts</string>
<string name="menu_add_two">Start a group chat</string>

<string name="new_friend">New friend</string>
<string name="group_cheat">Group chat</string>
<string name="group_public_number">公众号</string>
<string name="tag">标签</string>

<string name="alias">备注名</string>
<string name="phone_number">手机号</string>
<string name="describe">描述</string>
<string name="add_picture">附加照片</string>

<string name="exit_account"> Quit current account</string>
<string name="exit_app">Close Chat</string>

<string name="album">拍摄</string>
<string name="shot">拍摄</string>
<string name="location">位置</string>

<string name="my_chat_account">aaadd</string>

<string name="red_pack">红包</string>
<string name="add_tag_to_classfy_contacts">添加标签对联系人进行分类</string>
<string name="add_phone_number">添加电话号码</string>
<string name="add_business_card_or_pic">添加名片或相关图片</string>
<string name="please_to_talk">按住 说话</string>

<!--activity_add_friend-->
<string name="wechat_qq_phone">WeChat／ＱＱ／Weibo</string>
<string name="my_wechat_account">My phone number:</string>
<string name="radar_add_friend">雷达加朋友</string>
<string name="add_near_friend">添加身边的朋友</string>
<string name="create_group_face_to_face">面对面建群</string>
<string name="create_group_with_near_friend">与身边的朋友进入同一个群聊</string>
<string name="scan_qr_code_business_card">扫描二维码名片</string>
<string name="phone_contacts">Mobile Contact</string>
<string name="add_friend_from_contact">Add from mobile address book</string>
<string name="public_number">公众号</string>
<string name="get_more_info_and_service">获取更多资讯和服务</string>
<string name="scan_one_scan">扫一扫</string>


<string name="exit">quit</string>
<string name="user_no_found"> user is no exist</string>
<string name="activity_ad_text">广告倒计时：5秒</string>
<string name="activity_chat_button_text">send</string>
<string name="activity_login1_edittext_hint2">password</string>
<string name="activity_login1_edittext_hint1">QQ/phone/email</string>
<string name="activity_login1_newuser">new account</string>
<string name="activity_my_info_tv1_text">Avatar</string>
<string name="activity_my_info_tv2_text">nickname</string>
<string name="activity_register_button_text">Register</string>
<string name="activity_user_info_button_text">Add to Contacts</string>
<string name="fragment_discovery_text">Moments</string>
<string name="fragment_discovery_button_text">Timer</string>
<string name="fragment_me_github">github</string>
<string name="fragment_me_quit">quit</string>
<string name="item_chattext_receive_time_text">17:00</string>
<string name="item_chattext_receive_tv_textname">I am the name:</string>
<string name="item_chattext_receive_tv_textinfo">I am:</string>
<string name="list_item_1_btn1_text">receive</string>
<string name="list_item_1_btn2_text">Refuse</string>
<string name="list_item_1_nametext">3</string>
<string name="list_item_1_info_tiptext">yijieshou</string>
<string name="list_msg_item_tv_name">1</string>
<string name="list_msg_item_tv_msg">2</string>
<string name="main_act_buttontext_one">One</string>
<string name="main_act_buttontext_two">Two</string>
<string name="main_act_buttontext_three">Three</string>
<string name="main_act_buttontext_four">Four</string>
    <string name="activity_timer_tv_text">倒计时：50秒</string>
    <string name="activity_user_info_delete">Delete Contacts</string>
    <string name="activity_user_info_text">TYPE</string>
    <string name="activity_user_info_status">status</string>


</resources>

