<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="5dp">
    <TextView
        android:id="@+id/receive_Time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/item_chattext_receive_time_margin"
        android:background="@drawable/shape_notification_bg"
        android:gravity="center"
        android:paddingBottom="@dimen/item_chattext_receive_time_paddingbottom"
        android:paddingLeft="@dimen/item_chattext_receive_time_paddingleft"
        android:paddingRight="@dimen/item_chattext_receive_time_paddingright"
        android:paddingTop="@dimen/item_chattext_receive_time_paddingtop"
        android:text="@string/item_chattext_receive_time_text"
        android:textColor="#fff"
        android:textSize="@dimen/item_chattext_receive_time_textsize"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <ImageView
        android:id="@+id/head_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:src="@drawable/me_press" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/item_chattext_receive_ll_marginright"
        android:orientation="vertical"
        android:paddingLeft="@dimen/item_chattext_receive_ll_paddingleft">

        <TextView
            android:id="@+id/receive_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_chattext_receive_tv_margintop"
            android:text="@string/item_chattext_receive_tv_textname"
            android:textSize="@dimen/item_chattext_receive_tv_textname_textsize" />


        <TextView
            android:id="@+id/receive_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_chattext_receive_tv_margintop"
            android:gravity="center"
            android:text="@string/item_chattext_receive_tv_textinfo"
            android:textSize="@dimen/item_chattext_receive_tv_textinfo_textsize"
            android:background="@drawable/img_bubble_receive"/>


    </LinearLayout>
    </LinearLayout>
</LinearLayout>
