<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="right"
    android:orientation="vertical"
    android:paddingBottom="5dp">

    <!-- 显示时间 -->


    <TextView
        android:id="@+id/send_Time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/item_chattext_receive_time_margin"
        android:background="@drawable/shape_notification_bg"
        android:gravity="center"
        android:paddingBottom="@dimen/item_chattext_receive_time_paddingbottom"
        android:paddingLeft="@dimen/item_chattext_receive_time_paddingleft"
        android:paddingRight="@dimen/item_chattext_receive_time_paddingright"
        android:paddingTop="@dimen/item_chattext_receive_time_paddingtop"
        android:text="@string/item_chattext_receive_time_text"
        android:textColor="#fff"
        android:textSize="@dimen/item_chattext_receive_time_textsize"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/item_chattext_send_ll_marginleft"
            android:orientation="vertical"
            android:paddingLeft="@dimen/item_chattext_receive_ll_paddingleft"

            >

            <TextView
                android:id="@+id/send_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="@dimen/item_chattext_receive_tv_margintop"
                android:text="@string/item_chattext_receive_tv_textname"
                android:textSize="@dimen/item_chattext_receive_tv_textname_textsize" />

            <TextView
                android:id="@+id/send_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="@dimen/item_chattext_receive_tv_margintop"
                android:gravity="center"
                android:text="@string/item_chattext_receive_tv_textinfo"
                android:textSize="@dimen/item_chattext_receive_tv_textinfo_textsize"
                android:background="@drawable/img_bubble_send"/>


        </LinearLayout>
        <ImageView
            android:layout_marginLeft="@dimen/item_chattext_send_iv_marginleft"
            android:id="@+id/head_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
        android:src="@drawable/me_press"
        android:visibility="visible"/>
    </LinearLayout>

</LinearLayout>
